examples/test/testpolicy12120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12120
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key49: value2
      key31: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value1
      podSelector:
        matchLabels:
          key13: value20
          key49: value49
